# ToolShield

./: .gitignore  DEMO_SCRIPT.md  EXEC_SUMMARY.md  Makefile  README.md  THESIS_ARTIFACTS.md  pyproject.toml  requirements.txt
configs/: dataset.yaml  dataset_longschema.yaml  splits.yaml
configs/legacy/: README.md  heuristic_policy.yaml
configs/training/: context_transformer.yaml  context_transformer_keep_prompt_longschema.yaml  context_transformer_naive.yaml  context_transformer_naive_longschema.yaml  heuristic.yaml  heuristic_score.yaml  tfidf_lr.yaml  transformer.yaml
data/: .gitkeep
data/splits_longschema/S_attack_holdout/: manifest.json  test.jsonl  test_manifest.json  train.jsonl  train_manifest.json  val.jsonl  val_manifest.json
data/splits_longschema/S_random/: manifest.json  test.jsonl  test_manifest.json  train.jsonl  train_manifest.json  val.jsonl  val_manifest.json
outputs/: .gitkeep
scripts/: aggregate_experiments.py  export_latex_tables.py  export_truncation_example.py  generate_latex_from_summary.py  generate_plots.py  inflate_schemas.py  report_truncation_stats.py  run_demo.py  run_experiments.py  run_full_experiments.py  run_truncation_ablation.py  verify_dataset.py  verify_experiments_longschema_bundle.py  verify_longschema_splits.py  write_run_manifest.py
src/toolshield/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_context_truncation.py  test_dataset.py  test_demo.py  test_heuristic_score.py  test_metrics.py  test_schema.py  test_splits.py  test_truncation_ablation.py  test_verify_longschema_bundle.py
thesis/: .gitignore  BIBLIOGRAPHY_TODO.md  SUBMISSION_BLOCKERS.md  SUBMISSION_READINESS_REPORT.md  TU_Darmstadt_Compliance_Report.md  main.tex  references.bib
thesis/chapters/: conclusion.tex  discussion.tex  implementation.tex  introduction.tex  methodology.tex  related_work.tex  results.tex  tables.tex  threats_to_validity.tex
thesis/declaration/: README.md
(+22 files in other folders)
